# data/products.go
@@ -11,7 +11,12 @@ import (
 )
 
 // Product defines the structure for an API product
+// swagger:model
 type Product struct {
+	// the id for this product
+	//
+	// required: true
+	// min: 1
 	ID          int     `json:"id"`
 	Name        string  `json:"name" validate:"required"`
 	Description string  `json:"description"`
@@ -73,6 +78,19 @@ func UpdateProduct(id int, p *Product) error {
 
 	p.ID = id
 	productList[pos] = p
+
+	return nil
+
+}
+
+func DeleteProduct(id int) error {
+	_, pos, err := findProduct(id)
+	if err != nil {
+		return err
+	}
+
+	//remove from slice
+	productList = append(productList[:pos], productList[pos+1:]...)
 
 	return nil
 
