# main.go
@@ -45,8 +45,8 @@ func main() {
 	postRouter.HandleFunc("/", ph.AddProduct)
 	postRouter.Use(ph.MiddlewareProductValidation)
 
-	// deleteRouter := sm.Methods(http.MethodDelete).Subrouter() //create a subrouter for DELETE requests
-	// deleteRouter.HandleFunc("/{id:[0-9]+}", ph.DeleteProducts)
+	deleteRouter := sm.Methods(http.MethodDelete).Subrouter() //create a subrouter for DELETE requests
+	deleteRouter.HandleFunc("/{id:[0-9]+}", ph.DeleteProduct)
 
 	opts := middleware.RedocOpts{SpecURL: "/swagger.yaml"}
 	sh := middleware.Redoc(opts, nil)
