# swagger.yaml
@@ -1,6 +1,33 @@
 basePath: /
 consumes:
     - application/json
+definitions:
+    Product:
+        description: Product defines the structure for an API product
+        properties:
+            description:
+                type: string
+                x-go-name: Description
+            id:
+                description: the id for this product
+                format: int64
+                minimum: 1
+                type: integer
+                x-go-name: ID
+            name:
+                type: string
+                x-go-name: Name
+            price:
+                format: float
+                type: number
+                x-go-name: Price
+            sku:
+                type: string
+                x-go-name: SKU
+        required:
+            - id
+        type: object
+        x-go-package: github.com/acd19ml/gofolder/data
 info:
     description: Documentation for Product API
     title: classification of Product API
@@ -20,18 +47,34 @@ paths:
             operationId: addProduct
             tags:
                 - products
+    /products/{id}:
+        delete:
+            description: Returns a list of products
+            operationId: deleteProduct
+            parameters:
+                - description: The id of the product to delete from the database
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "201":
+                    $ref: '#/responses/noContent'
+            tags:
+                - products
 produces:
     - application/json
 responses:
+    noContent:
+        description: ""
     productsResponse:
         description: A list of products returns in the response
         schema:
-            properties:
-                int:
-                    format: int64
-                    type: integer
-                    x-go-name: A
-            type: object
+            items:
+                $ref: '#/definitions/Product'
+            type: array
 schemes:
     - http
 swagger: "2.0"
